# Cacus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README  main.plist
example/: CMakeLists.txt  README
example/basic/: CMakeLists.txt  README  main.cpp  shader.frag  shader.vert  stb_image.h
example/basic.deprecated/: CMakeLists.txt  README  main.cpp  shader.vert
include/: CommandBuffer.h  RenderTarget.h  RenderingContext.h  SwapChain.h  ViewableImage.h  cacus.h  utils.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  CommandBuffer.cpp  RenderingContext.cpp  SwapChain.cpp  cacus.cpp  glm.h  macros.h  shared_ptr.h  utils.cpp
src/core/: CMakeLists.txt  context.cpp  context.h  surface.cpp
src/include/: cacus.h  context.h  context_wrapper.h  glm.h  macros.h  shared_ptr.h  surface.h
src/scene/: drawable.h  material.h  mesh.h  node.h  pbr_material.h  static_mesh.h
src/wrappers/: CMakeLists.txt  instance.cpp
src/wrappers/include/: instance.h  surface_khr.h
test/: CMakeLists.txt  simple.test.cpp
